Servlet moved to frontend. Not a web bundle anymore. Added simulation OSGi service.